node/overseer/all-subsystems-gen/tests/ui/err-01-generic-used-twice.stderr
error: Generic type parameters may only be used for exactly one field, but is used more than once.
 --> $DIR/err-01-generic-used-twice.rs:6:5
  |
6 |     a: X,
  |        ^

error[E0599]: no method named `replace_a` found for struct `AllSubsystems<u16>` in the current scope
  --> $DIR/err-01-generic-used-twice.rs:15:17
   |
5  | struct AllSubsystems<X> {
   | ----------------------- method `replace_a` not found for this
...
15 |     let _all = all.replace_a(77u8);
   |                    ^^^^^^^^^ method not found in `AllSubsystems<u16>`
